# linux-gpib-test

./: CHANGELOG  Makefile.am  README  configure.ac  test-idn  test-srq-ibwait  test-srq-ibwait-ibrsp  test-srq-wait-srq
idn/: Makefile.am  test-idn.c
srq/: Makefile.am  test-ibwait-ibrsp.c  test-ibwait.c  test-wait-srq.c
