bin_PROGRAMS = test-wait-srq

test_wait_srq_SOURCES = \
test-wait-srq.c

test_wait_srq_CPPFLAGS = 
test_wait_srq_LDFLAGS = -lgpib

bin_PROGRAMS += test-ibwait

test_ibwait_SOURCES = \
test-ibwait.c

test_ibwait_CPPFLAGS = 
test_ibwait_LDFLAGS = -lgpib

bin_PROGRAMS += test-ibwait-ibrsp

test_ibwait_ibrsp_SOURCES = \
test-ibwait-ibrsp.c

test_ibwait_ibrsp_CPPFLAGS = 
test_ibwait_ibrsp_LDFLAGS = -lgpib

